@@ -22,6 +22,8 @@ git-annex (8.20200523) UNRELEASED; urgency=medium
   * export: Let concurrent transfers be done with -J or annex.jobs.
   * move --to, copy --to, mirror --to: When concurrency is enabled, run
     cleanup actions in separate job pool from uploads. 
+  * init: If lock probing stalls for a long time (eg a broken NFS server),
+    display a message to let the user know what's taking so long.
 
  -- Joey Hess <id@joeyh.name>  Tue, 26 May 2020 10:20:52 -0400
 
